2002-01-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Correct returns from within exception handler.
	* Source/NSUserDefaults.m: use NSDefaultRunLoopMode.

Mon Jan 21 17:08:42 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/Makefile.postamble (after-uninstall): Removed GSConfig.h 
	and mframe.h when uninstalling.

2002-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Wrap code in exception handlers to reset current
	runloop mode if an exception occurs ... may remove this again if the
	performance is too bad.
	Use initialiser for NSTimer to avoid having to put timers into the
	autorelease pool.
	* Headers/Foundation/NSTimer.h: Expose GNUstep initialiser since
	OpenStep and MacOS-X don't have one.

Wed Jan 16 13:46:24 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	Fixed dynamical loading of frameworks.
	* Source/NSBundle.m ([-_addFrameworkForClass:]): Fixed, should never
	be run during dynamical loading.
	* Source/NSBundle.m (_bundle_load_callback): Major simplification.
	Most code removed.  Should run faster too.
	([-load]): Do not DESTROY _bundle_load_callback's related
	variables.
	
Wed Jan 16 12:30:20 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m (_addFrameworkFromClass:): Fixed third argument
	of strncmp to be 12, not 12*sizeof(char).

2002-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Modify to have a nil current mode if the loop
	is not running (MacOS-X compatibility) and documented the change
	for autogsdoc.

Tue Jan 15 02:53:56 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Makefile.postamble (after-distclean): Always remove
	SSL.bundle, regardless of any flags.

2002-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Mostly implemented parsing of C declarations
	(function, typedef, constant and variable).

2002-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSArchiver.h: tidyups
	* Source/NSDictionary.m: tidyups