@@ -62,7 +62,8 @@
  *
  *	GSI_MAP_EXTRA
  *		If this value is defined, there is an 'extra' field in each
- *		map table which is a pointer to void.  This field can be used
+ *		map table whose type is that specified by the value of the
+ *		preprocessor constant. This field can be used
  *		to store additional information for the map.
  *
  */
@@ -71,30 +72,55 @@
 #define	GSI_MAP_HAS_VALUE	1
 #endif
 
+/*
+ * If GSI_NEW is defined we expect to pass a pointer to the maptable as
+ * the first argument to each macro so we can have the macros behave
+ * differently for different maptables.
+ * The old version will become obsolete and be removed at some point.
+ */
+#ifdef	GSI_NEW
+
+#ifndef	GSI_MAP_RETAIN_KEY
+#define	GSI_MAP_RETAIN_KEY(M, X)	[(X).obj retain]
+#endif
+#ifndef	GSI_MAP_RELEASE_KEY
+#define	GSI_MAP_RELEASE_KEY(M, X)	[(X).obj release]
+#endif
+#ifndef	GSI_MAP_RETAIN_VAL
+#define	GSI_MAP_RETAIN_VAL(M, X)	[(X).obj retain]
+#endif
+#ifndef	GSI_MAP_RELEASE_VAL
+#define	GSI_MAP_RELEASE_VAL(M, X)	[(X).obj release]
+#endif
+#ifndef	GSI_MAP_HASH
+#define	GSI_MAP_HASH(M, X)		[(X).obj hash]
+#endif
+#ifndef	GSI_MAP_EQUAL
+#define	GSI_MAP_EQUAL(M, X, Y)		[(X).obj isEqual: (Y).obj]
+#endif
+
+#else
+
 #ifndef	GSI_MAP_RETAIN_KEY
 #define	GSI_MAP_RETAIN_KEY(X)	[(X).obj retain]
 #endif
-
 #ifndef	GSI_MAP_RELEASE_KEY
 #define	GSI_MAP_RELEASE_KEY(X)	[(X).obj release]
 #endif
-
 #ifndef	GSI_MAP_RETAIN_VAL
 #define	GSI_MAP_RETAIN_VAL(X)	[(X).obj retain]
 #endif
-
 #ifndef	GSI_MAP_RELEASE_VAL
 #define	GSI_MAP_RELEASE_VAL(X)	[(X).obj release]
 #endif
-
 #ifndef	GSI_MAP_HASH
-#define	GSI_MAP_HASH(X)	[(X).obj hash]
+#define	GSI_MAP_HASH(X)		[(X).obj hash]
 #endif
-
 #ifndef	GSI_MAP_EQUAL
-#define	GSI_MAP_EQUAL(X,Y)	[(X).obj isEqual: (Y).obj]
+#define	GSI_MAP_EQUAL(X, Y)		[(X).obj isEqual: (Y).obj]
 #endif
 
+#endif
 
 /*
  *      If there is no bitmask defined to supply the types that
@@ -203,7 +229,7 @@ struct	_GSIMapTable {
   size_t	chunkCount;	/* Number of chunks in array.	*/
   GSIMapNode	*nodeChunks;	/* Chunks of allocated memory.	*/
 #ifdef	GSI_MAP_EXTRA
-  void		*extra;
+  GSI_MAP_EXTRA	extra;
 #endif
 };
 
@@ -213,15 +239,21 @@ struct	_GSIMapEnumerator {
 };
 
 static INLINE GSIMapBucket
-GSIMapPickBucket(GSIMapKey key, GSIMapBucket buckets, size_t bucketCount)
+GSIMapPickBucket(unsigned hash, GSIMapBucket buckets, size_t bucketCount)
 {
-  return buckets + GSI_MAP_HASH(key) % bucketCount;
+  return buckets + hash % bucketCount;
 }
 
 static INLINE GSIMapBucket
 GSIMapBucketForKey(GSIMapTable map, GSIMapKey key)
 {
-  return GSIMapPickBucket(key, map->buckets, map->bucketCount);
+#ifdef	GSI_NEW
+  return GSIMapPickBucket(GSI_MAP_HASH(map, key),
+    map->buckets, map->bucketCount);
+#else
+  return GSIMapPickBucket(GSI_MAP_HASH(key),
+    map->buckets, map->bucketCount);
+#endif
 }
 
 static INLINE void
@@ -327,7 +359,13 @@ GSIMapRemangleBuckets(GSIMapTable map,
 	  GSIMapBucket	bkt;
 
 	  GSIMapRemoveNodeFromBucket(old_buckets, node);
-	  bkt = GSIMapPickBucket(node->key, new_buckets, new_bucketCount);
+#ifdef	GSI_NEW
+	  bkt = GSIMapPickBucket(GSI_MAP_HASH(map, node->key),
+	    new_buckets, new_bucketCount);
+#else
+	  bkt = GSIMapPickBucket(GSI_MAP_HASH(node->key),
+	    new_buckets, new_bucketCount);
+#endif
 	  GSIMapAddNodeToBucket(bkt, node);
 	}
       old_buckets++;
@@ -445,14 +483,34 @@ GSIMapNewNode(GSIMapTable map, GSIMapKey key)
 static INLINE void
 GSIMapFreeNode(GSIMapTable map, GSIMapNode node)
 {
+#ifdef	GSI_NEW
+  GSI_MAP_RELEASE_KEY(map, node->key);
+#if	GSI_MAP_HAS_VALUE
+  GSI_MAP_RELEASE_VAL(map, node->value);
+#endif
+#else
   GSI_MAP_RELEASE_KEY(node->key);
 #if	GSI_MAP_HAS_VALUE
   GSI_MAP_RELEASE_VAL(node->value);
+#endif
 #endif
   node->nextInMap = map->freeNodes;
   map->freeNodes = node;
 }
 
+#ifdef	GSI_NEW
+static INLINE GSIMapNode 
+GSIMapNodeForKeyInBucket(GSIMapTable map, GSIMapBucket bucket, GSIMapKey key)
+{
+  GSIMapNode	node = bucket->firstNode;
+
+  while ((node != 0) && GSI_MAP_EQUAL(map, node->key, key) == NO)
+    {
+      node = node->nextInBucket;
+    }
+  return node;
+}
+#else
 static INLINE GSIMapNode 
 GSIMapNodeForKeyInBucket(GSIMapBucket bucket, GSIMapKey key)
 {
@@ -464,6 +522,7 @@ GSIMapNodeForKeyInBucket(GSIMapBucket bucket, GSIMapKey key)
     }
   return node;
 }
+#endif
 
 static INLINE GSIMapNode 
 GSIMapNodeForKey(GSIMapTable map, GSIMapKey key)
@@ -474,7 +533,11 @@ GSIMapNodeForKey(GSIMapTable map, GSIMapKey key)
   if (map->nodeCount == 0)
     return 0;
   bucket = GSIMapBucketForKey(map, key);
+#ifdef	GSI_NEW
+  node = GSIMapNodeForKeyInBucket(map, bucket, key);
+#else
   node = GSIMapNodeForKeyInBucket(bucket, key);
+#endif
   return node;
 }
 
@@ -622,8 +685,13 @@ GSIMapAddPair(GSIMapTable map, GSIMapKey key, GSIMapVal value)
 {
   GSIMapNode node;
 
+#ifdef	GSI_NEW
+  GSI_MAP_RETAIN_KEY(map, key);
+  GSI_MAP_RETAIN_VAL(map, value);
+#else
   GSI_MAP_RETAIN_KEY(key);
   GSI_MAP_RETAIN_VAL(value);
+#endif
   node = GSIMapNewNode(map, key, value);
 
   if (node != 0)
@@ -654,7 +722,11 @@ GSIMapAddKey(GSIMapTable map, GSIMapKey key)
 {
   GSIMapNode node;
 
+#ifdef	GSI_NEW
+  GSI_MAP_RETAIN_KEY(map, key);
+#else
   GSI_MAP_RETAIN_KEY(key);
+#endif
   node = GSIMapNewNode(map, key);
 
   if (node != 0)
@@ -673,8 +745,13 @@ GSIMapRemoveKey(GSIMapTable map, GSIMapKey key)
 
   if (bucket != 0)
     {
-      GSIMapNode	node = GSIMapNodeForKeyInBucket(bucket, key);
+      GSIMapNode	node;
 
+#ifdef	GSI_NEW
+      node = GSIMapNodeForKeyInBucket(map, bucket, key);
+#else
+      node = GSIMapNodeForKeyInBucket(bucket, key);
+#endif
       if (node != 0)
 	{
 	  GSIMapRemoveNodeFromMap(map, bucket, node);
