@@ -49,12 +49,21 @@
 /*
  *	Setup for inline operation of pointer map tables.
  */
+#ifdef	GSI_NEW
+#define	GSI_MAP_RETAIN_KEY(M, X)	
+#define	GSI_MAP_RELEASE_KEY(M, X)	
+#define	GSI_MAP_RETAIN_VAL(M, X)	
+#define	GSI_MAP_RELEASE_VAL(M, X)	
+#define	GSI_MAP_HASH(M, X)	((X).uint)
+#define	GSI_MAP_EQUAL(M, X,Y)	((X).uint == (Y).uint)
+#else
 #define	GSI_MAP_RETAIN_KEY(X)	
 #define	GSI_MAP_RELEASE_KEY(X)	
 #define	GSI_MAP_RETAIN_VAL(X)	
 #define	GSI_MAP_RELEASE_VAL(X)	
 #define	GSI_MAP_HASH(X)	((X).uint)
 #define	GSI_MAP_EQUAL(X,Y)	((X).uint == (Y).uint)
+#endif
 
 #include <base/GSIMap.h>
 
